--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -12,5 +12,9 @@
         </div>
       <% end %>
     </div>
+    <hr>
+    <div class="col-md-12 mt-5">
+      <%= link_to "Add Task", tasknew_path() %>
+    </div>
   </div>
 </div>
